syntax = "proto3";
option go_package = "github.com/cube2222/usos-notifier/credentials";
package credentials;

service Credentials {
    rpc GetSession (GetSessionRequest) returns (GetSessionResponse);
}

message GetSessionRequest {
    string userid = 1;
}

message GetSessionResponse {
    string sessionid = 1;
}
